--bug commit shift env

--- a/graph/src/App.css
+++ b/graph/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.form-control {
+  margin-left: 100px;
+  margin-top: 20px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
